--- a/app/design/frontend/base/default/template/catalog/product/view/addto.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view/addto.phtml
@@ -5,7 +5,7 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -20,9 +20,9 @@
     <ul class="add-to-links">
         <?php if ($_wishlistSubmitUrl) : ?>
             <li>
-                <a href="<?= $_wishlistSubmitUrl ?>"
-                   onclick="productAddToCartForm.submitLight(this, this.href); return false;"
-                   class="link-wishlist">
+                <a href="<?= $_wishlistSubmitUrl ?>" class="link-wishlist" title="<?= $this->__('Add to Wishlist') ?>"
+                   onclick="productAddToCartForm.submitLight(this, this.href); return false;">
+                    <?= $this->getIconSvg('heart') ?>
                     <?= $this->__('Add to Wishlist') ?>
                 </a>
             </li>
@@ -30,10 +30,9 @@
         <?php if ($_compareUrl) : ?>
             <?php $_params = $this->escapeHtml(json_encode(['form_key' => $this->getFormKey()])) ?>
             <li>
-                <?php if ($_wishlistSubmitUrl): ?><span class="separator">|</span><?php endif ?>
-                <a href="#"
-                   class="link-compare"
+                <a href="#" title="<?= $this->__('Add to Compare') ?>"
                    onclick="customFormSubmit('<?= $_compareUrl ?>', '<?= $_params ?>', 'post')">
+                    <?= $this->getIconSvg('scale') ?>
                     <?= $this->__('Add to Compare') ?>
                 </a>
             </li>
