--- a/app/design/frontend/base/default/template/catalogsearch/form.mini.phtml
+++ b/app/design/frontend/base/default/template/catalogsearch/form.mini.phtml
@@ -5,9 +5,10 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
 /** @var Mage_Core_Block_Template $this */
 /** @var Mage_CatalogSearch_Helper_Data $catalogSearchHelper */
 $catalogSearchHelper =  $this->helper('catalogsearch');
@@ -17,7 +18,7 @@ $catalogSearchHelper =  $this->helper('catalogsearch');
     <div class="input-box">
         <label for="search"><?= $this->__('Search:') ?></label>
         <input id="search" type="search" name="<?= $catalogSearchHelper->getQueryParamName() ?>" value="<?= $catalogSearchHelper->getEscapedQueryText() ?>" class="input-text required-entry" maxlength="<?= $catalogSearchHelper->getMaxQueryLength();?>" placeholder="<?= $this->quoteEscape($this->__('Search entire store here...')) ?>" />
-        <button type="submit" title="<?= $this->quoteEscape($this->__('Search')) ?>" class="button search-button"><?= $this->__('Search') ?></button>
+        <button type="submit" title="<?= $this->quoteEscape($this->__('Search')) ?>" class="button search-button"><?= $this->getIconSvg('search') ?></button>
     </div>
 
     <div id="search_autocomplete" class="search-autocomplete"></div>
