--- a/app/design/frontend/base/default/template/email/catalog/product/list.phtml
+++ b/app/design/frontend/base/default/template/email/catalog/product/list.phtml
@@ -86,20 +86,19 @@ $_params = $this->escapeHtml(json_encode(['form_key' => $this->getFormKey()]));
                                     <ul class="add-to-links">
                                         <?php if ($this->helper('wishlist')->isAllow()) : ?>
                                             <?php $_wishlistUrl = $this->helper('wishlist')->getAddUrlWithCustomParams($_product, [], false); ?>
-                                            <li><a href="#"
-                                                   data-url="<?= $_wishlistUrl ?>"
-                                                   data-params="<?= $_params ?>"
-                                                   class="link-wishlist"
+                                            <li><a href="#" data-url="<?= $_wishlistUrl ?>" data-params="<?= $_params ?>"
+                                                   class="link-wishlist" title="<?= $this->__('Add to Wishlist') ?>"
                                                    onclick="customFormSubmit('<?= $_wishlistUrl ?>', '<?= $_params ?>', 'post')">
+                                                    <?= $this->getIconSvg('scale') ?>
                                                     <?= $this->__('Add to Wishlist') ?>
                                                 </a>
                                             </li>
                                         <?php endif ?>
                                         <?php if ($_compareUrl = $this->getAddToCompareUrlCustom($_product, false)) : ?>
                                             <li>
-                                                <span class="separator">|</span>
-                                                <a href="#"
+                                                <a href="#" title="<?= $this->__('Add to Compare') ?>"
                                                    onclick="customFormSubmit('<?= $_compareUrl ?>', '<?= $_params ?>', 'post')">
+                                                    <?= $this->getIconSvg('scale') ?>
                                                     <?= $this->__('Add to Compare') ?>
                                                 </a>
                                             </li>
@@ -168,21 +167,19 @@ $_params = $this->escapeHtml(json_encode(['form_key' => $this->getFormKey()]));
                                     <?php if ($this->helper('wishlist')->isAllow()) : ?>
                                         <?php $_wishlistUrl = $this->helper('wishlist')->getAddUrlWithCustomParams($_product, [], false); ?>
                                         <li>
-                                            <a href="#"
-                                               data-url="<?= $_wishlistUrl ?>"
-                                               data-params="<?= $_params ?>"
-                                               class="link-wishlist"
+                                            <a href="#" data-url="<?= $_wishlistUrl ?>" data-params="<?= $_params ?>"
+                                               class="link-wishlist" title="<?= $this->__('Add to Wishlist') ?>"
                                                onclick="customFormSubmit('<?= $_wishlistUrl ?>', '<?= $_params ?>', 'post')">
+                                                <?= $this->getIconSvg('heart') ?>
                                                 <?= $this->__('Add to Wishlist') ?>
                                             </a>
                                         </li>
                                     <?php endif ?>
                                     <?php if ($_compareUrl = $this->getAddToCompareUrlCustom($_product, false)) : ?>
                                         <li>
-                                            <span class="separator">|</span>
-                                            <a href="#"
-                                               class="link-compare"
+                                            <a href="#" title="<?= $this->__('Add to Compare') ?>"
                                                onclick="customFormSubmit('<?= $_compareUrl ?>', '<?= $_params ?>', 'post')">
+                                                <?= $this->getIconSvg('scale') ?>
                                                 <?= $this->__('Add to Compare') ?>
                                             </a>
                                         </li>
