--- a/app/design/frontend/base/default/template/wishlist/item/column/remove.phtml
+++ b/app/design/frontend/base/default/template/wishlist/item/column/remove.phtml
@@ -5,15 +5,13 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022-2025 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
 /** @var Mage_Wishlist_Block_Customer_Wishlist_Item_Column_Remove $this */
 ?>
-<a href="#"
-   class="btn-remove btn-remove2"
-   title="<?= Mage::helper('core')->quoteEscape($this->__('Remove Item')) ?>"
+<a href="#" title="<?= Mage::helper('core')->quoteEscape($this->__('Remove Item')) ?>"
    onclick="if (confirmRemoveWishlistItem()) {
                 customFormSubmit(
                     '<?= $this->getItemRemoveUrlCustom($this->getItem(), false) ?>',
@@ -21,5 +19,6 @@
                     'post'
                 )
             }">
+    <?= $this->getIconSvg('x') ?>
     <?= $this->__('Remove item') ?>
 </a>
