--- a/app/design/frontend/base/default/template/maho/captcha/footer.phtml
+++ b/app/design/frontend/base/default/template/maho/captcha/footer.phtml
@@ -1,6 +1,15 @@
 <?php
+/**
+ * Maho
+ *
+ * @package    Maho_Captcha
+ * @copyright  Copyright (c) 2025 Maho (https://mahocommerce.com)
+ * @license    https://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
+ */
+
 $helper = Mage::helper('maho_captcha');
 if (!$helper->isEnabled()) return;
+$challengeUrl = $helper->getChallengeUrl();
 ?><script>
     let mahoCaptchaRenderedElements = [];
     function mahoCaptchaInject(element) {
@@ -8,7 +17,7 @@ if (!$helper->isEnabled()) return;
         mahoCaptchaRenderedElements.push(element.id);
 
         if (mahoCaptchaRenderedElements.length <= 1) {
-            element.insertAdjacentHTML('beforeend', '<altcha-widget challengeurl="https://your-challenge-url" hidelogo hidefooter></altcha-widget>');
+            element.insertAdjacentHTML('beforeend', '<altcha-widget challengeurl="<?= $challengeUrl ?>" hidelogo hidefooter></altcha-widget>');
             let script = document.createElement('script');
             script.type = 'module';
             script.src = 'https://eu.altcha.org/js/latest/altcha.min.js';
